--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,32 @@
+/*body-max-width*/
+.body-max-width{
+
+    max-width: 1440px;
+}
+
+/* SHARED STYLES   */
+ 
+.noto-serif-font{
+  font-family: "Noto Serif", serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
+.inter-font{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+.orange-color{
+    color: #E95A08;
+}
+
+
+
 /* header related styles */
 
 .header-boss{
@@ -22,3 +51,74 @@
     display: flex;
     
 }
+.menu-1{
+
+color: #252432;
+width: 46px;
+height: 24px;
+font-weight: bold;
+
+}
+.menu-2{
+
+    width: 39px;
+    height: 24px;
+    color:#8987A1 ;
+}
+.menu-3{
+color: #8987A1;
+width: 73px;
+height: 24px;
+
+}
+
+ /* Banner section related styles */
+
+ .banner-boss{
+   display: flex;
+   margin-top: 221px;
+  
+   margin-right: 150px;
+
+ }
+.banner-section-1{
+
+margin-left: 150px;
+
+
+
+
+}
+ .banner-title{
+
+    font-size: 65px;
+    width: 517px;
+    height: 89px;
+    
+    
+   
+    
+    
+   
+ }
+ .banner-description{
+
+    width: 570px;
+    height: 108px;
+    position: absolute;
+    top: 93%;
+    font-size: 22px;
+    color: rgba(0, 0, 0, 0.5);
+    
+    
+ }
+.banner-image{
+
+width: 570px;
+height: 355px;
+margin-right: 150px;
+position: absolute;
+top: 55%;
+
+}
+
