--- a/styles/index.css
+++ b/styles/index.css
@@ -262,6 +262,203 @@ right:  -120px;
    padding-top: 38px;
    padding-bottom: 38px;
 }
+/* latest deal related styles */
+.Latest-title{
+  font-size: 50px;
+  text-align: center;
+}
+.Latest-description{
+    font-size: 22px;
+    color: rgba(0, 0, 0, 0.5);
+    text-align: center;
+}
+.latest-contant{
+    display: flex;
+    gap: 28px;
+    
+}
+.latest-image-1{
+
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    width: 366.22px;
+    height: 206px;
+    gap: 25px;
+    margin-left: 150px;
+    
+    
+}
+.latest-image-2{
+    width: 753px;
+    height: 423.13px;
+    
+    
+}
+.latest-image-1 img{
+    border-radius: 20px;
+    
+    
+}
+.latest-image-2 img{
+        border-radius: 20px;
+}
+ /* img text class section */
+  .latest-image-text{
+    position: relative;
+    
+  }
+
+  .text-1{
+    position: absolute;
+    right: 880px;
+    top: 28px;
+    color: #ffff;
+    font-size: 20px;
+    padding: 10px;
+    white-space:nowrap;
+    background-color: rgba(0, 0, 0, 0.4);
+ }
+  .text-1-sub{
+
+    color: #ffff;
+    position: absolute;
+    left: 70px;
+    top: 50px;
+    text-underline-offset: 5px;
+    font-size: 16px;
+    background-color: rgba(0, 0, 0, 0.4);
+    
+  }
+  .text-2{
+    position: absolute;
+    right: 880px;
+    top: 255px;
+    color: #ffff;
+    font-size: 20px;
+    padding: 10px;
+    white-space:nowrap;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  .text-2-sub{
+
+    color: #ffff;
+    position: absolute;
+    left: 60px;
+    top: 50px;
+    text-underline-offset: 5px;
+    font-size: 16px;
+    background-color: rgba(0, 0, 0, 0.4);
+    
+  }
+  .text-3{
+     position: absolute;
+    right: 200px;
+    top: 120px;
+    color: #ffff;
+    font-size: 40px;
+    padding: 10px;
+    white-space:nowrap;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  .text-3-sub{
+
+    color: #ffff;
+    position: absolute;
+    left: 150px;
+    top: 80px;
+    text-underline-offset: 8px;
+    font-size: 28px;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+   /* join related styles */
+
+   
+   
+   .join-boss{
+
+    position: relative;
+   }
+   .bg-img{
+    width: 1440px;
+    height: 533px;
+    margin-top: 120px;
+    
+   }
+  .join-title{
+    position: absolute;
+    top: 150px;
+    right: 430px;
+    font-size: 50px;
+    color: #FFFFFF;
+
+  }
+  .join-email-box{
+    position: absolute;
+    top: 300px;
+    right: 500px;
+  }
+  .join-email{
+    width: 650px;
+    height: 50px;
+  }
+  .join-label{
+    background-color: #E95A08;
+    color: #FFFFFF;
+    width: 186px;
+    height: 18px;
+    font-size: 16px;
+    padding: 19px 53.5px;
+    position: absolute;
+    text-align: center;
+    
+  }
+  /*footer related styles */
+
+  .footer-boss{
+    display: flex;
+    margin-top: 50px;
+    margin-left: 160px;
+    margin-right: 160px;
+    gap: 60px;
+  }
+  .description-1{
+    width: 359px;
+    height: 81px;
+    font-size: 22px;
+    color: rgba(0, 0, 0, 0.5);
+  }
+  .img-1{
+    width: 36px;
+    height: 36px;
+  }
+  .img-2{
+    width: 36px;
+    height: 36px;
+  }
+  .img-3{
+    width: 36px;
+    height: 36px;
+  }
+  .img-4{
+    width: 36px;
+    height: 36px;
+  }
+  .footer-2 li{
+    color: rgba(107, 114, 128, 1);
+    list-style: none;
+  }
+  .footer-2{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 50px;
+  }
+  
+  
+  
+
+
+
+
 /* responsive related styles */
 @media screen and (max-width: 576px) {
 
